--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ iface<span style="color: #333333">.</span>addVectorLayer(outfile,<span style="ba
  <!-- HTML generated using hilite.me BufferAutomation END-->
 </div>
 </div>
-<footer>&#169;YunHO 2021</footer>
+<footer>&#169;YunHo 2021</footer>
 
 
 </body>
